CVE-2025-64718 js-yaml CVE fix.

--- a/examples/ReactJsSdkApp/package.json
+++ b/examples/ReactJsSdkApp/package.json
@@ -33,8 +33,7 @@
     "zustand": "^5.0.6"
   },
   "resolutions": {
-    "clean-css": "^5.3.3",
-    "postcss": "^8.5.3"
+    "clean-css": "^5.3.3"
   },
   "browserslist": {
     "production": [
