--- a/examples/package.json
+++ b/examples/package.json
@@ -7,6 +7,7 @@
   "resolutions": {
     "express": "^4.21.2",
     "glob-parent": "^6.0.2",
+    "js-yaml": "^4.1.0",
     "nth-check": "^2.1.1",
     "postcss": "^8.5.3",
     "serialize-javascript": "^6.0.2"
