--- a/examples/package.json
+++ b/examples/package.json
@@ -5,6 +5,7 @@
     "ReactJsSdkApp"
   ],
   "resolutions": {
+    "eslint": "^9.26.0",
     "express": "^4.22.1",
     "glob-parent": "^6.0.2",
     "js-yaml": "^4.1.0",
